[package]
name = "reth-sync-controller"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/reth"
readme = "README.md"

[dependencies]
# reth
reth-primitives = { path = "../primitives" }
reth-interfaces = { path = "../interfaces" }
reth-stages = { path = "../stages" }
reth-db = { path = "../storage/db" }

# async
tokio = { version = "1.21.2", features = ["sync"] }
tokio-stream = "0.1.10"
futures = "0.3"
